--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -11,14 +11,11 @@ html {
 input {
     opacity: 0;
     visibility: hidden;
+    height: 0;
 }
 body {
     color: #0e0482;
     font-family: 'Josefin Sans', sans-serif;
-}
-
-.accordion-wrapper {
-    padding: 4.8rem 2.4rem;
 }
 
 img {
@@ -28,6 +25,7 @@ img {
 .accordion-wrapper {
     max-width: 60%;
     margin: 0 auto;
+    padding: 4.8rem 2.4rem;
 }
 
 .accordion-title {
@@ -60,8 +58,6 @@ input:checked + .accordion__label .accordion__content {
 }
 
 .accordion__label span {
-    /* display: none; */
-    opacity: 0;
     transition: all 0.3s ease-in-out;
 }
 
@@ -75,11 +71,6 @@ input:checked + .accordion__label .plus {
     opacity: 0;
 }
 
-/* input:checked + .accordion__label .minus svg {
-    display: block;
-    opacity: 1;
-} */
-
 .accordion__title {
     font-size: 2.4rem;
     display: flex;
@@ -87,6 +78,9 @@ input:checked + .accordion__label .plus {
 }
 
 @media (hover: hover) {
+    .accordion__label span {
+        opacity: 0;
+    }
     .accordion:hover input:checked + .accordion__label .minus,
     .accordion:hover input:not(:checked) + .accordion__label .plus {
         display: block;
@@ -104,5 +98,50 @@ input:checked + .accordion__label .plus {
     .accordion__item:hover .accordion__label .plus {
         display: none !important;
         opacity: 0;
+    }
+    .accordion__item:hover .accordion__label {
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .accordion-wrapper {
+        max-width: 75%;
+    }
+}
+
+
+@media screen and (max-width: 1024px) {
+    .accordion-wrapper {
+        max-width: 80%;
+    }
+    .accordion-title {
+        font-size: 3.2rem;
+        margin-bottom: 2.4rem;
+    }
+    .accordion__title {
+        font-size: 2rem;
+    }
+    .accordion__content {
+        max-width: 80%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .accordion-wrapper {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .accordion-title {
+        font-size: 2.4rem;
+        margin-bottom: 1.6rem;
+    }
+    .accordion__title {
+        font-size: 1.6rem;
+    }
+    .accordion__content {
+        max-width: 90%;
     }
 }
