--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -71,7 +71,7 @@ input:checked + .accordion__label .plus {
     opacity: 0;
 }
 
-.accordion__title {
+.accordion__item-title {
     font-size: 2.4rem;
     display: flex;
     justify-content: space-between;
@@ -119,7 +119,7 @@ input:checked + .accordion__label .plus {
         font-size: 3.2rem;
         margin-bottom: 2.4rem;
     }
-    .accordion__title {
+    .accordion__item-title {
         font-size: 2rem;
     }
     .accordion__content {
@@ -138,7 +138,7 @@ input:checked + .accordion__label .plus {
         font-size: 2.4rem;
         margin-bottom: 1.6rem;
     }
-    .accordion__title {
+    .accordion__item-title {
         font-size: 1.6rem;
     }
     .accordion__content {
